# gemini-framework

./: .dockerignore  .env.example  .gitignore  404.html  README.md  Taskfile.yml  chat_formatted.txt  docker-compose-old.yml  docker-compose.yaml  docker-compose.yml  index.html  install-dependencies.ps1  install-dependencies.sh  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  setup.py
api/cultivars/: index.html
api/data_formats/: index.html
api/data_types/: index.html
api/dataset_records/: index.html
api/dataset_types/: index.html
api/datasets/: index.html
api/experiments/: index.html
api/model_records/: index.html
api/model_runs/: index.html
api/models/: index.html
api/overview/: index.html
api/plants/: index.html
api/plots/: index.html
api/procedure_records/: index.html
api/procedure_runs/: index.html
api/procedures/: index.html
api/script_records/: index.html
api/script_runs/: index.html
api/scripts/: index.html
api/seasons/: index.html
api/sensor_platforms/: index.html
api/sensor_records/: index.html
api/sensor_types/: index.html
api/sensors/: index.html
api/sites/: index.html
api/trait_levels/: index.html
api/trait_records/: index.html
api/traits/: index.html
cli/: index.html
database/schema/: index.html
database/scripts/: index.html
docs/: cli.md  getting_started.md  index.md
docs/api/: cultivars.md  data_formats.md  data_types.md  dataset_records.md  dataset_types.md  datasets.md  experiments.md  model_records.md  model_runs.md  models.md  overview.md  plants.md  plots.md  procedure_records.md  procedure_runs.md  procedures.md  script_records.md  script_runs.md  scripts.md  seasons.md  sensor_platforms.md  sensor_records.md  sensor_types.md  sensors.md  sites.md  trait_levels.md  trait_records.md  traits.md
docs/database/: schema.md  scripts.md
docs/examples/: cultivar_api.md  cultivar_experiment_api.md  cultivar_plot_api.md  data_format_api.md  data_format_types_api.md  data_type_api.md  dataset_api.md  dataset_experiment_api.md  dataset_record_api.md  dataset_record_files_api.md  dataset_type_api.md  experiment_api.md  experiment_cultivars_api.md  experiment_datasets_api.md  experiment_model_api.md  experiment_plots_api.md  experiment_procedure_api.md  experiment_script_api.md  experiment_season_api.md  experiment_sensor_api.md  experiment_sensor_platforms_api.md  experiment_sites_api.md  experiment_traits_api.md  model_api.md  model_dataset_api.md  model_experiment_api.md  model_model_run_api.md  model_run_api.md  model_run_model_api.md  overview.md  plant_api.md  plant_cultivar_api.md  plant_plot_api.md  plot_api.md  plot_cultivar_api.md  plot_experiment_api.md  procedure_api.md  procedure_dataset_api.md  procedure_experiment_api.md  procedure_procedure_run_api.md  (+30 more)
docs/pipeline/: overview.md
gemini/: __init__.py  config.py  manager.py
gemini_chart/: Chart.yaml  values.yaml
getting_started/: index.html
search/: search_index.json
(+906 files in other folders)
