[tool.poetry]
name = "gemini-framework"
version = "0.9.6"
description = "GEMINI Framework"
authors = ["Pranav Ghate <pghate@ucdavis.edu>"]
readme = "README.md"
packages = [
    { include = "gemini"}
]

[tool.poetry.dependencies]
python = "^3.10"
minio = "7.2.4"
python-on-whales = "0.73.0"
redis = "5.2.0"
sqlalchemy = "2.0.26"
sqlalchemy-mixins = "2.0.5"
pydantic-settings = "2.6.1"
click = "8.1.7"
psycopg2-binary = "2.9.10"
asyncpg = "0.30.0"
litestar = {version = "2.13.0", extras = ["standard"]}
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gemini = "gemini.cli.__main__:cli"