[project]
name = "gemini-framework"
version = "0.9.6"
description = "GEMINI Framework"
authors = [
    {name = "Pranav Ghate",email = "pranavghate94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pydantic (>=2.11.0,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "sqlalchemy-mixins (>=2.0.5,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "litestar[standard] (>=2.15.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pendulum (>=3.0.0,<4.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "python-on-whales (>=0.76.1,<0.77.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "prefect (>=3.3.1,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "prefect-aws (>=0.5.9,<0.6.0)",
    "gitpython (>=3.1.44,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "gemini"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gemini = "gemini.cli.__main__:cli"